更新: work 指令监控消息事件的大致流程;

--- a/cx-auto-sign/cx-auto-sign.csproj
+++ b/cx-auto-sign/cx-auto-sign.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="3.0.0" />
+    <PackageReference Include="Websocket.Client" Version="4.3.21" />
   </ItemGroup>
 
   <ItemGroup>
