--- a/cx-auto-sign/cx-auto-sign.csproj
+++ b/cx-auto-sign/cx-auto-sign.csproj
@@ -8,8 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="3.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.7" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="3.1.7" />
+    <PackageReference Include="Serilog" Version="2.9.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
     <PackageReference Include="Websocket.Client" Version="4.3.21" />
   </ItemGroup>
 
