--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -23,3 +23,8 @@ jobs:
       run: dotnet build --configuration Release --no-restore
     - name: Publish
       run: dotnet publish -c Release -o out 
+    - name: Upload Build Artifact
+      uses: actions/upload-artifact@v2
+      with: 
+        name: cx-auto-sign-publish
+        path: "out"
