--- a/CxSignHelper/CxSignHelper.csproj
+++ b/CxSignHelper/CxSignHelper.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <PackageProjectUrl>https://github.com/cyanray/cx-auto-sign</PackageProjectUrl>
   </PropertyGroup>
 
   <ItemGroup>
