--- a/cx-auto-sign/cx-auto-sign.csproj
+++ b/cx-auto-sign/cx-auto-sign.csproj
@@ -4,6 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>cx_auto_sign</RootNamespace>
+    <PackageProjectUrl>https://github.com/cyanray/cx-auto-sign</PackageProjectUrl>
   </PropertyGroup>
 
   <ItemGroup>
