--- a/cx-auto-sign/cx-auto-sign.csproj
+++ b/cx-auto-sign/cx-auto-sign.csproj
@@ -19,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\cx-auto-sign.WebApi\cx-auto-sign.WebApi.csproj" />
     <ProjectReference Include="..\CxSignHelper\CxSignHelper.csproj" />
   </ItemGroup>
 
