--- a/CxSignHelper/CxSignHelper.csproj
+++ b/CxSignHelper/CxSignHelper.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <PackageProjectUrl>https://github.com/cyanray/cx-auto-sign</PackageProjectUrl>
     <Version>1.2.0</Version>
   </PropertyGroup>
