--- a/cx-auto-sign.WebApi/cx-auto-sign.WebApi.csproj
+++ b/cx-auto-sign.WebApi/cx-auto-sign.WebApi.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>cx_auto_sign.WebApi</RootNamespace>
     <OutputType>Library</OutputType>
   </PropertyGroup>
