--- a/cx-auto-sign/cx-auto-sign.csproj
+++ b/cx-auto-sign/cx-auto-sign.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>cx_auto_sign</RootNamespace>
     <PackageProjectUrl>https://github.com/cyanray/cx-auto-sign</PackageProjectUrl>
     <Version>1.3.0</Version>
