--- a/cx-auto-sign/cx-auto-sign.csproj
+++ b/cx-auto-sign/cx-auto-sign.csproj
@@ -5,8 +5,9 @@
     <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>cx_auto_sign</RootNamespace>
     <PackageProjectUrl>https://github.com/cyanray/cx-auto-sign</PackageProjectUrl>
-    <Version>1.3.0</Version>
-    <AssemblyVersion>1.2.1.0</AssemblyVersion>
+    <Version>1.3.1</Version>
+    <AssemblyVersion>1.3.1.0</AssemblyVersion>
+    <FileVersion>1.3.1.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
