更新: WebApi服务使用Serilog记录日志;

--- a/cx-auto-sign.WebApi/cx-auto-sign.WebApi.csproj
+++ b/cx-auto-sign.WebApi/cx-auto-sign.WebApi.csproj
@@ -6,5 +6,9 @@
     <OutputType>Library</OutputType>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Serilog.AspNetCore" Version="3.4.0" />
+  </ItemGroup>
+
 
 </Project>
